# expert-learning

./: Makefile  README.md  pyproject.toml  scalar_experiment.ipynb  vector-experiment.ipynb
src/: vector-experiment.py
